--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,32 @@ body {
   min-height: 100vh;
   width: 100%;
 }
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-content: center;
+  z-index: 999;
+  background-color: var(--danger-main);
+}
+.preloader.remove {
+  visibility: hidden;
+  opacity: 0;
+}
+.preloader-inner {
+  animation: bounce 0.7s ease-in-out infinite alternate;
+}
+@keyframes bounce {
+  0% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
 
 .navbar {
   padding-block: 30px;
@@ -212,6 +238,15 @@ body {
   left: 0;
   width: 100%;
   background-color: var(--danger-bg-color);
+  animation: slideIn 0.5s ease forwards;
+}
+@keyframes slideIn {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .container {
