--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,6 +230,8 @@ body {
 
 .navbar {
   padding-block: 30px;
+  background-color: var(--danger-main);
+  color: var(--danger-focus);
 }
 
 .navbar.active {
@@ -268,11 +270,13 @@ body {
 .nav-item:not(:last-child) {
   margin-inline-end: 2vw;
 }
-
+.navbar.active .nav-link {
+  color: var(--danger-pressed);
+}
 .nav-link {
   font-size: var(--fs-8);
   font-weight: var(--fw-medium);
-  color: var(--danger-pressed);
+  color: var(--danger-focus);
 
   position: relative;
   overflow: hidden;
