--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@
   --border-radius-3: 12px;
   --border-radius-4: 16px;
   --border-radius-5: 20px;
-  --border-full: 9999px;
+  --border-radius-circle: 50%;
   /* box shadow */
   --box-shadow-1: 0 1px 3px rgba(17, 24, 39, 0.09);
   --box-shadow-2: 0 3px 6px rgba(17, 24, 39, 0.1);
@@ -225,6 +225,47 @@ body {
   }
   100% {
     transform: translateY(0);
+  }
+}
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+  background-color: var(--danger-main);
+  border: 3px solid var(--danger-focus);
+  color: var(--danger-focus);
+  border-radius: var(--border-radius-circle);
+  padding: var(--spacing-5);
+  box-shadow: var(--box-shadow-3);
+  cursor: pointer;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+}
+.scroll-to-top i {
+  font-size: var(--fs-4);
+}
+.scroll-to-top.active {
+  opacity: 1;
+  visibility: visible;
+
+  animation: pulse 1s ease-in-out infinite alternate;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 
